# aws-lambda-ecs-service-deployment-notifications

./: .gitignore  .trivyignore  Jenkinsfile  README.md  batect.yml  pyproject.toml
containers/release/: Dockerfile
containers/test/: Dockerfile
src/ecs_service_deployment_notifications/: ecs.py  handler.py  slack.py
terraform/: events.tf  lambda.tf  outputs.tf  variables.tf
tests/fixtures/: sample_events.py
tests/integration/: test_handler.py
tests/unit/: test_ecs.py  test_handler.py  test_slack.py
