[project]
name = "ecs-service-deployment-notifications"
version = "0.1.0"
description = "Send Slack notifications when receiving ECS service deployment events for configured cluster"
authors = [
    { name = "Sam Pickering", email = "83871143+samhpickering@users.noreply.github.com" }
]
requires-python = ">=3.13.4"
dependencies = [
    "boto3>=1.39.4",
    "boto3-stubs[lambda]>=1.39.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = "src"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
